[package]
name = "type-mapper"
version = "0.1.1"
edition = "2021"
readme = "README.md"
authors = ["Matthew Mastracci <matthew@mastracci.com>"]
description = "Macro to map types based on examples."
license = "MIT/Apache-2.0"
repository = "https://github.com/mmastrac/type-mapper"

[lib]
proc-macro = true

[dependencies]
syn = { version = "2.0", features = ["full"] }
quote = "1.0"
proc-macro2 = "1.0"

[dev-dependencies]
macrotest = "1.1"
static_assertions = "1.1"
